@@ -33,6 +33,8 @@ Require-Bundle: org.apache.xerces;resolution:=optional,
  org.eclipse.ui.console,
  org.apache.ivy,
  org.eclipse.help,
- org.eclipse.wst.xml.core
+ org.eclipse.wst.xml.core,
+ org.eclipse.debug.core,
+ org.eclipse.jdt.launching
 Bundle-ActivationPolicy: lazy
 Bundle-RequiredExecutionEnvironment: J2SE-1.4
